# sailor_duck_renderer

./: .gitignore  CMakeLists.txt  README.md  h origin main
include/sailor_duck/: ColorPalette.hpp  SailorDuckSprite.hpp  Sprite.hpp  SpriteRenderer.hpp
scripts/: build_and_run.bat
src/: ColorPalette.cpp  SailorDuckSprite.cpp  Sprite.cpp  SpriteRenderer.cpp  main.cpp
